<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:enabled="true"
        android:defaultValue="80"
        android:key="weight"
        android:title="@string/preferences_weight_title"
        android:summary="@string/preferences_weight_summary"
        android:inputType="numberDecimal"/>
    <PreferenceCategory
        android:title="@string/preferences_gpx_category_title"
        android:summary="@string/preferences_gpx_category_summary">
        <SwitchPreference
            android:enabled="true"
            android:title="@string/preferences_gpx_save"
            android:defaultValue="true"
            android:key="gpx_save"/>
        <EditTextPreference
            android:enabled="true"
            android:defaultValue="90"
            android:key="gpx_cleanup"
            android:title="@string/preferences_gpx_cleanup"
            android:inputType="numberDecimal"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_db_title"
        android:summary="@string/preferences_db_summary">
        <SwitchPreference
            android:enabled="true"
            android:title="@string/preferences_db_save"
            android:defaultValue="true"
            android:key="db_save"/>
        <EditTextPreference
            android:enabled="true"
            android:defaultValue="3"
            android:key="db_cleanup"
            android:title="@string/preferences_db_cleanup_month"
            android:inputType="numberDecimal"/>
        <EditTextPreference
            android:enabled="true"
            android:defaultValue="2"
            android:key="db_cleanup"
            android:title="@string/preferences_db_cleanup_year"
            android:inputType="numberDecimal"/>
    </PreferenceCategory>
</PreferenceScreen>