<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="10dp"
    android:paddingBottom="1dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailIcon"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailActivity"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailDateText"
            android:text="@string/date"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailDate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="viewEnd"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailDistanceText"
            android:text="@string/distance"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailDistance"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="viewEnd"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailTimeText"
            android:text="@string/time"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailTime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="viewEnd"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailAvgSpeedText"
            android:text="@string/avgspeed"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailAvgSpeed"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="viewEnd"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailCaloriesText"
            android:text="@string/calories"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/historyDetailCalories"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="viewEnd"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>